--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -878,6 +878,9 @@ form.taak--start {
             pointer-events: none;
         }
     }
+    .help-block:not(.invalid-text) {
+        font-size: 0.8888rem;
+    }
 
     textarea {
         height: 2.5em;
