Change standaard externe omschrijving to standaard teksten

--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_lijst.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_lijst.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div class="container__flex">
-            <h1>Standaard Externe Omschrijvingen</h1>
+            <h1>Standaard Teksten</h1>
             <a class="btn btn-action btn-240"
                href="{% url 'standaard_externe_omschrijving_aanmaken' %}">
                 <svg width="24"
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </form>
-        <h2>Standaard Externe Omschrijvingen</h2>
+        <h2>Standaard Teksten</h2>
         <table>
             <thead>
                 <tr>
