Additional change for standaard tekst.

--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanmaken.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanmaken.html
@@ -2,7 +2,7 @@
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
 {% block title %}
-    Standaard Externe Omschrijving Aanmaken | Beheer | PlanR
+    Standaard Tekst Aanmaken | Beheer | PlanR
 {% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
@@ -21,7 +21,7 @@
                 Standaard Teksten
             </a>
         </div>
-        <h1>Standaard Externe Omschrijving Aanmaken</h1>
+        <h1>Standaard Tekst Aanmaken</h1>
         <div class="grid-container">
             <div class="grid-item">
                 <form action="."
