--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
@@ -2,7 +2,7 @@
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
 {% block title %}
-    Wijzig Standaard Externe Omschrijving | Beheer | PlanR
+    Wijzig Standaard Tekst | Beheer | PlanR
 {% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
@@ -21,7 +21,7 @@
                 Standaard Teksten
             </a>
         </div>
-        <h1>Wijzig Standaard Externe Omschrijving</h1>
+        <h1>Wijzig Standaard Tekst</h1>
         <div class="grid-container">
             <div class="grid-item">
                 <form action="."
