Styling fixes after upgrade to Django 4.2

--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -56,7 +56,7 @@
                             {{ form.kolommen|render_rotterdam_formulier }}
                             <div class="form-row">
                                 <h3 class="label">Onderwerpen</h3>
-                                {{ form.standaard_filters }}
+                                <div class="list--grouped">{{ form.standaard_filters }}</div>
                             </div>
                             <div class="form-row">
                                 <h3 class="label">{{ form.taaktypes.label_tag }}</h3>
