--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -85,6 +85,7 @@ $container-max-widths: (
     lg: 832px,
     xl: 992px,
     xxl: 1152px,
+    xxxl: 1280px,
 );
 
 // rotterdam-ui extension: we have extra margins *outside* the normal
