--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -66,7 +66,7 @@ body.show-modal--first-filter {
             max-width: map-get($container-max-widths, md);
         }
         &--wide {
-            max-width: 100%;
+            max-width: map-get($container-max-widths, xxxl);
         }
     }
 
