--- a/app/apps/dashboard/templates/dashboard/base.html
+++ b/app/apps/dashboard/templates/dashboard/base.html
@@ -15,7 +15,11 @@
     <div class="screen-xl container__dashboard">
         <div class="container__filters">
             <div class="container__title">
-                <h1>Dashboard</h1>
+                <h1>
+                    {% block content_title %}
+                        Dashboard
+                    {% endblock content_title %}
+                </h1>
                 <div class="filters">
                     <button type="button"
                             class="btn btn-filter"
