--- a/app/apps/dashboard/templates/dashboard/taken/nieuwe_taakopdrachten.html
+++ b/app/apps/dashboard/templates/dashboard/taken/nieuwe_taakopdrachten.html
@@ -7,22 +7,21 @@
 {% block title %}
     Dashboard | PlanR
 {% endblock title %}
+{% block content_title %}
+    Nieuwe taken
+{% endblock content_title %}
 {% block content %}
     <div class="screen-xl">
         <section class="section--seperated--l">
             <div class="grid-container grid-container--full"
                  data-controller="chart-utils">
-                {% include "charts/base_chart.html" with title="Ping pong taken" description="Toont in de rood tinten taken die meer dan 1 keer zijn aangemaakt in afgehandelde meldingen. Het getal in de popup is het percentage van het totaal aantal meldingen waarin dit gebeurde." period_title=title tabs=taaktype_aantallen_per_melding_tabs options=stacked_bars_options eenheid="%" only %}
+                {% include "charts/base_chart.html" with title="Nieuwe taken" description="" period_title=title tabs=nieuwe_taakopdrachten_tabs only %}
             </div>
         </section>
         <section class="section--seperated--l">
-            <div>
-                <h2>Top tien</h2>
-                <div class="grid-container grid-container--2cols">
-                    <div class="grid-item bgc-white">
-                        {% include "charts/dashboard_item.html" with title=top_10_taaktype_aantallen.title description="" period_title=title head=top_10_taaktype_aantallen.head body=top_10_taaktype_aantallen.body only %}
-                    </div>
-                </div>
+            <div class="grid-container grid-container--full"
+                 data-controller="chart-utils">
+                {% include "charts/base_chart.html" with title="Aantal taken afgehandeld minus nieuw" description="" period_title=title tabs=taken_nieuw_vs_afgehandeld_tabs only %}
             </div>
         </section>
     </div>
