--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -17,6 +17,7 @@ $green-tint01: #00811f;
 $green-tint02: #006e32;
 $green-tint03: #006e32;
 $green-tint04: #ebf5ed;
+$green-400: #cfdbd5;
 $green-600: #e3f4dd;
 
 //badges, beetje vreemde kleuren, nog niet elders tegengekomen
