--- a/app/frontend/assets/styles/components/_badges.scss
+++ b/app/frontend/assets/styles/components/_badges.scss
@@ -46,7 +46,7 @@
 .container--env {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 227px;
     width: 100%;
     pointer-events: none;
     z-index: 200;
