--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -75,17 +75,24 @@
     </head>
     <body class="{% block body_class %}{% endblock body_class %}">
         <a href="#id_maincontent" class="skiplink">Ga direct naar de content</a>
-        {% block header %}
-            {% with pageTitle="PlanR" %}
-                {% include "snippets/pageheader.html" %}
-            {% endwith %}
-        {% endblock header %}
-        <main data-controller="main">
-            <div class="container">
-                {% block body %}
-                {% endblock body %}
+        <div class="container__toplevel">
+            {% block aside %}
+                {% include "snippets/aside.html" %}
+            {% endblock aside %}
+            <div class="container__main">
+                {% block header %}
+                    {% with pageTitle="PlanR" %}
+                        {% include "snippets/pageheader.html" %}
+                    {% endwith %}
+                {% endblock header %}
+                <main data-controller="main">
+                    <div class="container">
+                        {% block body %}
+                        {% endblock body %}
+                    </div>
+                </main>
             </div>
-        </main>
+        </div>
         <div class="spinner"></div>
         {% include "auth/session_timer.html" %}
         {% if APP_ENV != "productie" %}
