--- a/app/frontend/assets/styles/components/_pagination.scss
+++ b/app/frontend/assets/styles/components/_pagination.scss
@@ -13,19 +13,26 @@
             border: 0;
             outline: none;
             height: 32px;
-            background-color: white;
+            background-color: transparent;
             display: flex;
             align-items: center;
             justify-content: center;
             padding-left: 6px;
             padding-right: 6px;
             font-size: 16px;
+            cursor: pointer;
 
             svg {
                 padding-left: 6px;
             }
             &:hover {
                 background-color: #e0eee2;
+                color: $green-tint01;
+                svg {
+                    path {
+                        fill: $green-tint01;
+                    }
+                }
             }
 
             &.btn--next {
@@ -42,7 +49,6 @@
         }
         span {
             color: $green-tint01;
-            background-color: #e0eee2;
         }
     }
 
@@ -61,6 +67,15 @@
                     font-size: 16px;
                     display: block;
                     width: 32px;
+                    cursor: pointer;
+
+                    &:hover,
+                    &:has(input:checked) {
+                        border: 0;
+                        box-shadow: none;
+                        color: $green-tint01;
+                        background-color: #e0eee2;
+                    }
                 }
 
                 input {
@@ -70,30 +85,8 @@
                     border: 0;
                     box-shadow: none;
 
-                    &::before {
-                        content: "";
-                        display: block;
-                        position: absolute;
-                        width: 32px;
-                        height: 32px;
-                        background-color: white;
-                        z-index: -1;
-                        left: 0;
-                        top: -3px;
-                    }
-                    &:hover,
-                    &:checked {
-                        border: 0;
-                        box-shadow: none;
-                        &::before {
-                            color: $green-tint01;
-                            background-color: #e0eee2;
-                        }
-                    }
                     &:focus {
-                        &:before {
-                            @include focus-outline();
-                        }
+                        box-shadow: none;
                     }
                 }
             }
