--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -9,7 +9,7 @@ body {
     margin: 0;
     font-family: "Bolder", sans-serif;
     font-size: 1em;
-    color: $gray-tint11;
+    color: $body-color;
     background-color: $gray-tint00;
 
     @media (min-width: map-get($grid-breakpoints, sm)) {
@@ -34,25 +34,23 @@ html {
         width: 227px;
         height: 100vh;
         box-sizing: border-box;
-        transition: width 0.25s ease-in-out;
+        transition: width $transition-duration-default $transition-ease-default;
         position: fixed;
         border-right: 1px solid $green-400;
-        &.nav--small {
+
+        .nav--small & {
             width: 60px;
         }
     }
 
-    .nav--small + .container__main {
-        margin-left: 60px;
-    }
     .container__main {
         margin-left: 227px;
         flex: 1;
-        transition: margin-left 0.25s ease-in-out;
+        transition: margin-left $transition-duration-default $transition-ease-default;
 
         > .bar {
             border-bottom: 1px solid $green-400;
-            height: 68px;
+            height: 67px;
             width: 100%;
             background-color: transparent;
         }
@@ -60,6 +58,12 @@ html {
             padding: 1em 0.75em 0;
             margin-bottom: 5em;
         }
+    }
+}
+
+.nav--small {
+    aside + .container__main {
+        margin-left: 60px;
     }
 }
 
@@ -618,7 +622,7 @@ body.no-js {
 .show-vertical {
     max-height: 100%;
     padding-top: 16px;
-    transition: all 0.25s ease-in;
+    transition: all $transition-duration-default ease-in;
 
     &.container__sorting {
         max-height: 100px;
@@ -732,34 +736,6 @@ body.no-js {
     border-bottom: 1px solid $gray-600;
 }
 
-.bar {
-    background-color: $gray-tint01;
-    &--top {
-        .list-nav--tertiary {
-            small {
-                @extend .visually-hidden;
-            }
-        }
-
-        @media (min-width: map-get($grid-breakpoints, lg)) {
-            .list-nav--tertiary {
-                small {
-                    display: inline;
-                    position: relative;
-                    overflow: visible;
-                    clip: auto;
-                    height: auto;
-                    width: auto;
-                    margin: 0;
-                    padding: 0;
-                    border: 0;
-                    pointer-events: all;
-                }
-            }
-        }
-    }
-}
-
 .counter {
     display: block;
     margin-top: -1.5em;
@@ -805,7 +781,7 @@ body.no-js {
     -webkit-box-orient: vertical;
     width: 100%;
     z-index: 20;
-    transition: max-height 0.25s ease-in-out;
+    transition: max-height $transition-duration-default $transition-ease-default;
     background-color: inherit;
 
     svg {
