--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -135,7 +135,7 @@ $h5-font-size: 1rem;
 $h6-font-size: 0.8888rem;
 $font-size-base: 1rem;
 
-$body-color: $gray-tint11;
+$body-color: $black;
 $text-muted: $gray-tint09;
 
 // Form text
@@ -265,3 +265,7 @@ $card-height: 100%;
 
 // Labels
 $dt-font-weight: 700;
+
+//transition
+$transition-duration-default: 0.25s;
+$transition-ease-default: ease-in-out;
