--- a/app/frontend/assets/styles/components/_badges.scss
+++ b/app/frontend/assets/styles/components/_badges.scss
@@ -50,6 +50,11 @@
     width: 100%;
     pointer-events: none;
     z-index: 200;
+    transition: left $transition-duration-default $transition-ease-default;
+
+    .nav--small & {
+        left: 60px;
+    }
 
     .badge {
         height: 48px;
