--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -57,6 +57,8 @@
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
+    background-color: $gray-tint01;
+    z-index: 20;
     h1 {
         font-size: 1.2em;
         white-space: nowrap;
@@ -151,7 +153,7 @@
             svg {
                 left: 20px;
                 transform: scaleX(-1) translateY(-50%);
-                transition: transform 0.25s ease-in-out;
+                transition: transform $transition-duration-default $transition-ease-default;
             }
         }
     }
@@ -160,8 +162,8 @@
         opacity: 1;
         display: inline-block;
         transition-property: opacity, display;
-        transition-duration: 0.25s;
-        transition-timing-function: ease-in-out;
+        transition-duration: $transition-duration-default;
+        transition-timing-function: $transition-ease-default;
         transition-behavior: allow-discrete;
         @starting-style {
             opacity: 0;
@@ -178,7 +180,7 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            transition: opacity 0.25s ease-in-out;
+            transition: opacity $transition-duration-default $transition-ease-default;
 
             &--large {
                 opacity: 1;
@@ -193,7 +195,7 @@
         }
     }
 
-    &.nav--small {
+    .nav--small & {
         .nav--wide {
             display: none;
             opacity: 0;
