--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -643,9 +643,9 @@ body.no-js {
     padding-top: 0;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.25s ease-in;
+    transition: max-height $transition-duration-default ease-in;
     &.container__sorting {
-        transition: all 0.25s ease-in;
+        transition: all $transition-duration-default ease-in;
     }
 }
 
